--- a/2_loops.ipynb
+++ b/2_loops.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4wMBnAlzsvwejCHxos6hO",
+      "authorship_tag": "ABX9TyOKFHGahxmbm51vxDKbkwB5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,9 +29,29 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Loops\n",
+        "# Loops"
+      ],
+      "metadata": {
+        "id": "mhOo2TtLSmuu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Reading\n",
         "\n",
-        "Loops allow execution of the same code once for each item in a `sequence`. A `basic` or `for` loop takes this form:\n",
+        "- https://www.tutorialspoint.com/python/python_loops.htm (through nested loops)"
+      ],
+      "metadata": {
+        "id": "EZ5LJkcdS44v"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Basic Loops\n",
+        "\n",
+        "Loops allow execution of the same code once for each item in a `sequence`. A `basic` (`for`) loop takes this form:\n",
         "\n",
         "```\n",
         "for item in <sequence>:\n",
