add strings example

--- a/2_loops.ipynb
+++ b/2_loops.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKFHGahxmbm51vxDKbkwB5",
+      "authorship_tag": "ABX9TyMPYUTrSDdBY+FnXfEl3zPS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,13 +70,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yj9qCxrXJNxM",
-        "outputId": "048ab544-cb5e-446e-c757-f686c07cb1cf"
+        "outputId": "e88fc96a-eb52-42d0-f663-a02db19be6b9"
       },
       "outputs": [
         {
@@ -86,7 +86,8 @@
             "apple\n",
             "lemon\n",
             "berry\n",
-            "0, 1, 2, 3, 4, "
+            "0, 1, 2, 3, 4, \n",
+            "a - b - r - a - c - a - d - a - b - r - a - "
           ]
         }
       ],
@@ -96,7 +97,12 @@
         "  print(fruit)\n",
         "\n",
         "for num in range(5):\n",
-        "  print(num, end=\", \")"
+        "  print(num, end=\", \")\n",
+        "\n",
+        "print()\n",
+        "# strings are actually sequences of charaacters\n",
+        "for letter in \"abracadabra\":\n",
+        "  print(letter, end=\" - \")"
       ]
     },
     {
