add examples of comments

--- a/1_python_intro.ipynb
+++ b/1_python_intro.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPVwlKJrDIHlIIf3+71ToMR",
+      "authorship_tag": "ABX9TyM20cibcvDgUY8jbfOdoFAy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +41,7 @@
         "## Reading\n",
         "\n",
         "- Think Python, Chapter 1 & 2 - https://allendowney.github.io/ThinkPython/\n",
-        "- https://www.tutorialspoint.com/python/python_basic_syntax.htm"
+        "- https://www.tutorialspoint.com/python/python_overview.htm (Python Basics)"
       ],
       "metadata": {
         "id": "Hm-3gzrSLD2E"
@@ -161,7 +160,7 @@
         "id": "Y7mDF_DETQN0",
         "outputId": "0c3564b9-a1b6-4cdf-8f58-6b9d6dfaae4c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -188,7 +187,7 @@
         "id": "Ds3EqyMTTiKQ",
         "outputId": "1d6f8a01-63eb-4c48-9ba5-91a8e83a990f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -215,7 +214,7 @@
         "id": "RUMMn2QMUYXu",
         "outputId": "d201bc72-6053-43d3-8edf-d7b09da673ef"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -283,7 +282,7 @@
         "id": "zTepOUddV-6P",
         "outputId": "2ecc14da-589a-4231-8200-13e5fb5248b9"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,7 +322,7 @@
         "id": "8r7E1JPnWRUZ",
         "outputId": "1ff9aacb-39ce-44fb-d445-ab211cac570a"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -364,7 +363,7 @@
         "id": "rZKjRnBHOzNy",
         "outputId": "39f2fb02-393d-4969-c0e6-93d395a510fc"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,7 +399,7 @@
         "id": "6yS84-hWXAkW",
         "outputId": "6472e1ee-4cf7-4107-a6cf-44eaaf911b3d"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,6 +408,98 @@
             "result: 12\n",
             "My name is Earl\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "By default, the print command outputs a `new line`, but that can be overridden:"
+      ],
+      "metadata": {
+        "id": "4jm04jjVXgjZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"first\", end=\" - \")\n",
+        "print(\"second\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ByVMZyhcXrkz",
+        "outputId": "b1f1659c-7833-4b90-9bf5-b7562e3f7c26"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "first - second\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Comments\n",
+        "\n",
+        "Python supports `comments` - text that won't be executed. These are an important way to leave explanations in code.\n",
+        "\n",
+        "Comments can be a single line or a multi-line block.\n"
+      ],
+      "metadata": {
+        "id": "39OxbXIwVpwq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# single-line comment is prefaced with a pound sign\n",
+        "\n",
+        "name = \"smith\"  # comments can be on the same line as a command\n",
+        "print(name)\n",
+        "\n",
+        "'''\n",
+        " multi-line commands are delimited with triple quotes.\n",
+        " these are conventient for explanations that can't fit\n",
+        " on just one line\n",
+        "'''"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "id": "FYwETjKPWFYC",
+        "outputId": "85c06e2b-8e7f-460b-adfd-37df5cdb6f35"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "smith\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"\\n multi-line commands are delimited with triple quotes.\\n these are conventient for explanations that can't fit \\n on just one line\\n\""
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 6
         }
       ]
     }
