--- a/2_loops.ipynb
+++ b/2_loops.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMPYUTrSDdBY+FnXfEl3zPS",
+      "authorship_tag": "ABX9TyONxeEjknMkmpYKEsBjT0ea",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,10 @@
       "source": [
         "### Reading\n",
         "\n",
-        "- https://www.tutorialspoint.com/python/python_loops.htm (through nested loops)"
+        "- https://www.tutorialspoint.com/python/python_loops.htm (through nested loops)\n",
+        "\n",
+        "**Watch**\n",
+        "- https://www.youtube.com/watch?v=qwAFL1597eM (chapter 8)"
       ],
       "metadata": {
         "id": "EZ5LJkcdS44v"
@@ -70,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -130,7 +133,7 @@
         "id": "-hfcAyzkLarp",
         "outputId": "99a4515e-f750-4b59-8f24-cdb87f7d46fa"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,7 +170,7 @@
         "id": "jTbXYm9_NTcR",
         "outputId": "9e4acffd-29d6-4383-eb5e-08e82db1541f"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,7 +207,7 @@
         "id": "QrqppoHaP2nL",
         "outputId": "687a4230-2110-4c31-f46d-078628cdb606"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,7 +255,7 @@
         "id": "0Km0KmnoPLXd",
         "outputId": "e03e1b74-0632-4966-8b3b-46040feb66b9"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -297,7 +300,7 @@
         "id": "4Usp_cDaOB9m",
         "outputId": "430d6894-35ec-4db7-cddb-9838135d570e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +352,7 @@
         "id": "o0QQHtW9REcJ",
         "outputId": "a4db7286-2a97-408d-8e58-7f1c59a20ba4"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
