--- a/4_conditional_logic.ipynb
+++ b/4_conditional_logic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOqt7gi4Cr6BV8Pho1QkyJl",
+      "authorship_tag": "ABX9TyMi3JbMI2HfJ/NURJMJdOXr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,11 +40,11 @@
       "source": [
         "### Reading\n",
         "\n",
-        "- https://allendowney.github.io/ThinkPython/chap03.html\n",
-        "- https://www.tutorialspoint.com/python/python_functions.htm (through built-in functions)\n",
-        "\n",
-        "**Watch**\n",
-        "- https://www.youtube.com/watch?v=qwAFL1597eM (chapter 9)\n"
+        "- https://allendowney.github.io/ThinkPython/chap05.html\n",
+        "- https://www.tutorialspoint.com/python/python_comparison_operators.htm\n",
+        "- https://www.tutorialspoint.com/python/python_logical_operators.htm\n",
+        "- https://www.tutorialspoint.com/python/python_control_flow.htm (through case statements)\n",
+        "\n"
       ],
       "metadata": {
         "id": "9rv2VeLLczuY"
