--- a/4_conditional_logic.ipynb
+++ b/4_conditional_logic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMi3JbMI2HfJ/NURJMJdOXr",
+      "authorship_tag": "ABX9TyPCmt1Bm+rGR20k4l2VAj3l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Functions"
+        "# Conditional Logic"
       ],
       "metadata": {
         "id": "ZagjHO99cn4E"
