--- a/1_python_intro.ipynb
+++ b/1_python_intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM20cibcvDgUY8jbfOdoFAy",
+      "authorship_tag": "ABX9TyMkmEdZB5AsHqn50qonNWbQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -342,6 +342,46 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Strings can also be combined using `F-string` syntax:"
+      ],
+      "metadata": {
+        "id": "RLKw2ydohHBx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = \"Earl\"\n",
+        "f\"My name is {name}\""
+      ],
+      "metadata": {
+        "id": "wKyw_uIOhNYw",
+        "outputId": "d04b4b9f-f57f-4e83-c3a3-c22ca83441e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'My name is Earl'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Print command\n",
         "\n",
         "Python programs can output messages using the `print` command:"
@@ -433,7 +473,7 @@
         "id": "ByVMZyhcXrkz",
         "outputId": "b1f1659c-7833-4b90-9bf5-b7562e3f7c26"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,7 +519,7 @@
         "id": "FYwETjKPWFYC",
         "outputId": "85c06e2b-8e7f-460b-adfd-37df5cdb6f35"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
