--- a/5_files.ipynb
+++ b/5_files.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrpbZeau8mBBFEAG0EJPYj",
+      "authorship_tag": "ABX9TyMa42dYl0YEmIs7biqLd/Xr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,8 +29,26 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# File Processing\n",
+        "# File Processing"
+      ],
+      "metadata": {
+        "id": "U5VrmiDWuqme"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Reading\n",
         "\n",
+        "- https://www.tutorialspoint.com/python/python_file_handling.htm"
+      ],
+      "metadata": {
+        "id": "_oAmcWfbuk8-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Python programs can read and write files.\n",
         "\n",
         "- File contents are large strings\n",
@@ -39,21 +57,12 @@
         "```\n",
         "myFile = open('myfile.txt', 'r') # open file for read operations\n",
         "```\n",
-        "- After completing read/write operations, the file must be closed\n",
+        "- After completing read/write operations, the file should be closed\n",
         "- file name must include it's location relative to the current program, or an absolute file path."
       ],
       "metadata": {
         "id": "l2EXO6y-rDms"
       }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "g3NO5AEiqq8d"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
