add string notes

--- a/1_python_intro.ipynb
+++ b/1_python_intro.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkmEdZB5AsHqn50qonNWbQ",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOKzxHOPf54KCnAKCmejlo0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -242,7 +243,7 @@
       "source": [
         "### Strings\n",
         "\n",
-        "Strings are sequences of letters delimited by single or double quotes."
+        "Strings are sequences of characters delimited by single or double quotes."
       ],
       "metadata": {
         "id": "71iRybn_VU9l"
@@ -296,6 +297,44 @@
           },
           "metadata": {},
           "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "String can contain special `control` characters (e.g. tabs, spaces, new line, etc.)"
+      ],
+      "metadata": {
+        "id": "z5b6kbwLwWpm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Name\\tMajor\")\n",
+        "print(\"----\\t----\")\n",
+        "print(\"Smith\\tScience\")\n",
+        "print(\"Jones\\tArt\")"
+      ],
+      "metadata": {
+        "id": "y4-BfqYvwwIV",
+        "outputId": "6ec43709-8301-4d53-8473-20425fbbabdf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Name\tMajor\n",
+            "----\t----\n",
+            "Smith\tScience\n",
+            "Jones\tArt\n"
+          ]
         }
       ]
     },
@@ -356,26 +395,169 @@
       ],
       "metadata": {
         "id": "wKyw_uIOhNYw",
-        "outputId": "d04b4b9f-f57f-4e83-c3a3-c22ca83441e4",
+        "outputId": "4791a7fa-9acd-40a9-cffd-fe6957ec9075",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
-      "execution_count": 1,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'My name is Earl'"
+              "'My name is Earl        4.0'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Or strings can be combined with a `format` command:"
+      ],
+      "metadata": {
+        "id": "OtfujoG6xQZb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = \"Dave\"\n",
+        "hobby = \"baseball\"\n",
+        "\n",
+        "\"Hi. My name is {0} and I like {1}\".format(name, hobby)"
+      ],
+      "metadata": {
+        "id": "PojHNpq-xX6G",
+        "outputId": "eba5a779-bbbe-4c90-91d4-745e64be2497",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Hi. My name is Dave and I like baseball'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "string placeholders can include a format specifier for how the value should be displayed.\n",
+        "\n",
+        "format specifier has the form:\n",
+        "```\n",
+        "<width>.<precision><type>\n",
+        "```\n",
+        "width sets how may spaces to occupy and precision indicates # of decimal places.\n",
+        "For example, the below example formats ‘total’ value to 2 decimal places:"
+      ],
+      "metadata": {
+        "id": "0jY53Pj5x-6i"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "price = 123\n",
+        "f\"Total price is ${price:10.2f} plus tax\""
+      ],
+      "metadata": {
+        "id": "rDdm2aXQyODk",
+        "outputId": "77332e05-d1b4-4acb-862c-188a3b9b7d25",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Total price is $    123.00 plus tax'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Character Encoding\n",
+        "\n",
+        "Computer operating systems associate a distinct numeric value with individual characters according to a standard convention such as:\n",
+        "\n",
+        "- **ASCII** - most common latin characters & symbols\n",
+        "- **UTF-8** - support for nearly all characters in all languages\n",
+        "\n",
+        "Characters include not only letters and numbers, but also **Control** characters - special characters that control computer behavior (e.g. tabs, spaces, carriage returns, etc.)\n",
+        "\n",
+        "**Note** - Upper- & Lower-case letters have different numeric values."
+      ],
+      "metadata": {
+        "id": "9oBLVEliylzn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Python provides commands to translate between characters and their numeric value:"
+      ],
+      "metadata": {
+        "id": "6LrDA8tkzf14"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(chr(65))  # returns character associated with a number\n",
+        "print(\"A\", ord('A')) # returns number associated with a character\n",
+        "print(\"a\", ord('a'))"
+      ],
+      "metadata": {
+        "id": "pqSHeOknznew",
+        "outputId": "365d33c6-e81d-41d8-b0cb-d078e5bcb309",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A\n",
+            "A 65\n",
+            "a 97\n"
+          ]
         }
       ]
     },
