--- a/1_python_intro.ipynb
+++ b/1_python_intro.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOKzxHOPf54KCnAKCmejlo0",
+      "authorship_tag": "ABX9TyNFDk70xUki4Et8hYLvB8AD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,9 @@
         "## Reading\n",
         "\n",
         "- Think Python, Chapter 1 & 2 - https://allendowney.github.io/ThinkPython/\n",
-        "- https://www.tutorialspoint.com/python/python_overview.htm (Python Basics)"
+        "- https://www.tutorialspoint.com/python/python_overview.htm (Python Basics)\n",
+        "- https://www.tutorialspoint.com/python/python_string_formatting.htm\n",
+        "- https://www.tutorialspoint.com/python/python_escape_characters.htm"
       ],
       "metadata": {
         "id": "Hm-3gzrSLD2E"
@@ -318,11 +320,11 @@
         "print(\"Jones\\tArt\")"
       ],
       "metadata": {
-        "id": "y4-BfqYvwwIV",
-        "outputId": "6ec43709-8301-4d53-8473-20425fbbabdf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "y4-BfqYvwwIV",
+        "outputId": "6ec43709-8301-4d53-8473-20425fbbabdf"
       },
       "execution_count": 3,
       "outputs": [
@@ -436,12 +438,12 @@
         "\"Hi. My name is {0} and I like {1}\".format(name, hobby)"
       ],
       "metadata": {
-        "id": "PojHNpq-xX6G",
-        "outputId": "eba5a779-bbbe-4c90-91d4-745e64be2497",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "PojHNpq-xX6G",
+        "outputId": "eba5a779-bbbe-4c90-91d4-745e64be2497"
       },
       "execution_count": 6,
       "outputs": [
@@ -483,12 +485,12 @@
         "f\"Total price is ${price:10.2f} plus tax\""
       ],
       "metadata": {
-        "id": "rDdm2aXQyODk",
-        "outputId": "77332e05-d1b4-4acb-862c-188a3b9b7d25",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "rDdm2aXQyODk",
+        "outputId": "77332e05-d1b4-4acb-862c-188a3b9b7d25"
       },
       "execution_count": 10,
       "outputs": [
@@ -542,11 +544,11 @@
         "print(\"a\", ord('a'))"
       ],
       "metadata": {
-        "id": "pqSHeOknznew",
-        "outputId": "365d33c6-e81d-41d8-b0cb-d078e5bcb309",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pqSHeOknznew",
+        "outputId": "365d33c6-e81d-41d8-b0cb-d078e5bcb309"
       },
       "execution_count": 13,
       "outputs": [
