Add info on built-in functions

--- a/3_functions.ipynb
+++ b/3_functions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCWc8yCphyB6NQOsXwDkoF",
+      "authorship_tag": "ABX9TyNr6vQg82LkSeDhmF5Gs4u0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,10 +79,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "HHBzXvlrcmxr",
-        "outputId": "7c55eac4-6e28-4a40-c63e-34468ad64e08",
+        "outputId": "f37434be-11ff-474e-f24a-e5de979fbb86",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -132,12 +132,12 @@
       ],
       "metadata": {
         "id": "Y9afqDGsZNqx",
-        "outputId": "3337be82-c35e-4ac0-dd1c-696d7b960534",
+        "outputId": "1b38081e-2bf4-4af3-a554-69d5a695e711",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,17 +168,17 @@
         "def printWelcome(name,title=\"Honorable\"):\n",
         "  print(\"Welcome\", title, name)\n",
         "\n",
-        "printWelcome(\"Smith\", \"Dr.\")\n",
+        "printWelcome(\"Smith\",\"Dr.\")\n",
         "printWelcome(\"Jones\")"
       ],
       "metadata": {
         "id": "1KKFvDzBbxDU",
-        "outputId": "df7c2d1a-0074-4586-e09d-bc5c556d7c5c",
+        "outputId": "6b146def-635d-4caa-95f1-2ab7ebe14ff5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,7 +216,7 @@
           "height": 198
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,7 +274,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -300,7 +300,7 @@
       ],
       "metadata": {
         "id": "5wFOsQA5e0rb",
-        "outputId": "86e7d324-b2f9-477d-80b6-7a034b59c508",
+        "outputId": "c379bba6-7469-4247-8cf2-8ca3eb975753",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -314,6 +314,52 @@
             "Sum 7\n",
             "Product 12\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Built-in Functions"
+      ],
+      "metadata": {
+        "id": "tCmezws73-m_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# global functions\n",
+        "print(\"Hello\")\n",
+        "\n",
+        "import math\n",
+        "math.pow(4,3)"
+      ],
+      "metadata": {
+        "id": "s7LADcld4Gog",
+        "outputId": "ebfc90e6-07eb-4b45-9789-f44e64b84805",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "64.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
         }
       ]
     }
